# hyena

./: README.md  intro.ipynb  pyproject.toml
hyena/: decoder.py  hyena.py
